--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "agora-rtc-sdk-ng": "^4.23.3",
     "bad-words": "^4.0.0",
     "firebase": "^11.8.1",
     "react": "^19.1.0",
