--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "scribble-mania": "file:",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "use-sound": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
