--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "scribble-mania": "file:",
+    "sweetalert2": "^11.22.0",
     "tailwindcss": "^4.1.7",
     "use-sound": "^5.0.0"
   },
